welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:7: error: '(' expected but identifier found.
for i <- 0 to x
    ^