welcome.lessons.welcome.loopfor.LoopFor.scala.code
var x = 0
while (!estSurBiscuit())
	{avance()
	x = x + 1}
prendreBiscuit()
for i <- 0 to x
{recule()}
poseBiscuit()